# plexsort

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  MATCHING.md  PLAN.md  PLEX_SETUP.md  README.md  STATUS.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_job_runs.py  003_bitrate.py  004_omdb.py  005_omdb_attempts.py  006_omdb_payload.py  007_box_office_raw.py  008_rt_rating_raw.py
frontend/: admin.html  index.html
frontend/assets/: admin.js  app.js  style.css
src/plexsort/: __init__.py  config.py  db.py  jobs.py  main.py  models.py  schemas.py
src/plexsort/api/: admin.py  public.py
src/plexsort/ingest/: lb_csv.py  lb_scrape.py  omdb.py  plex.py
src/plexsort/match/: __init__.py  engine.py
tests/: test_api_integration.py  test_lb_csv.py  test_match_engine.py  test_omdb_ingest.py  test_plex_ingest.py  test_public_schemas.py
